--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,10 @@ body {
 
 /* Header */
 header {
-    
+    font-family: 'Quicksand', sans-serif;
 }
 
-div img {
+nav img {
     width: 300px;
     height: 110px;
 }
