Add margin-top to main element and styles the navbar with toggle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,9 @@ header {
     background-color: white;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 header a {
@@ -47,7 +50,7 @@ nav a {
     background-color: rgb(37, 37, 255);
     border: 1px solid white;
     margin-bottom: 2px;
-    height: 100px;
+    height: 30px;
     width: 150px;
     text-align: center;
     display: flex;
@@ -58,8 +61,8 @@ nav a {
 
 #logo {
     background-color: white;
-    width: 300px;
-    height: 110px;
+    width: 250px;
+    height: 95px;
 }
 
 nav .active {
@@ -85,6 +88,20 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
+    top: 100%;
+}
+
+/* Nav toggle */
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 /* Main */
@@ -92,6 +109,7 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 103px;
 }
 
 /* Footer */
