--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* Google fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
@@ -37,19 +37,41 @@ header a {
     color: inherit;
 }
 
+
+#logo {
+    background-color: white;
+    width: 250px;
+    height: 95px;
+}
+
+/* Navbar styles with dropdown toggle */
+nav {
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    left: 0;
+    padding: 0 6rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 100%;
+    border-top: 3px solid black;
+}
+
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
     font-weight: bold;
     color: white;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
 }
 
 nav a {
-    margin-bottom: 1em;
-    background-color: rgb(37, 37, 255);
-    border: 1px solid white;
-    margin-bottom: 2px;
+    background-color: #ffffff;
+    border: 1px solid #5068A9;
+    color: #5068A9;
     height: 30px;
     width: 150px;
     text-align: center;
@@ -59,41 +81,35 @@ nav a {
     position: relative;
 }
 
-#logo {
-    background-color: white;
-    width: 250px;
-    height: 95px;
+nav .active {
+    background-color: #5068A9;
+    border: 1px solid #5068A9;
+    color: #ffffff;
 }
 
-nav .active {
-    background-color: #fff;
-    border: 1px solid black;
-    color: black;
+nav .nav-list {
+    display: flex;
+    flex-direction: row;
+    left: 30px;
 }
 
 #menu li a {
     padding: 0;
+    left: -7px;
+    height: 10vh;
+}
+
+#menu li {
+    width: 100%;
 }
 
 #menu a:hover {
     background-color: lightgray;
 }
 
-/* Navbar styles with dropdown toggle */
-nav {
-    position: absolute;
-    background-color: #ffffff;
-    width: 100%;
-    left: 0;
-    padding: 0 1rem;
-    box-shadow: 0 2px 2px #3a3a3a;
-    display: none;
-    top: 100%;
-}
-
 /* Nav toggle */
 #nav-toggle:checked~nav {
-    display: block;
+    display: inline;
 }
 
 #nav-toggle {
@@ -102,11 +118,15 @@ nav {
 
 .nav-toggle-label {
     font-size: 2rem;
+    position: absolute;
+    right: 25px;
+    top: 25px;
 }
+
 
 /* Main */
 main {
-    background-color: lightblue;
+    background-color: white;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 103px;
@@ -115,4 +135,33 @@ main {
 /* Footer */
 footer {
     background-color: lightgray;
+}
+
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+    /* Header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+    }
+
+    header {
+        align-items: initial;
+    }
+
+    #menu {
+        position: relative;
+        top: 15px;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+
+    /* Main content */
+    main {
+        margin-top: 99px;
+    }
 }
