--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,6 @@ nav {
     font-size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
-    font-weight: bold;
     color: white;
     justify-content: space-between;
     display: flex;
@@ -69,9 +68,9 @@ nav {
 }
 
 nav a {
-    background-color: #ffffff;
-    border: 1px solid #5068A9;
-    color: #5068A9;
+    background-color: #5068A9;
+    border-top: 1px solid #ffffff;
+    color: #ffffff;
     height: 30px;
     width: 150px;
     text-align: center;
@@ -82,9 +81,8 @@ nav a {
 }
 
 nav .active {
-    background-color: #5068A9;
-    border: 1px solid #5068A9;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #5068A9;
 }
 
 nav .nav-list {
@@ -134,7 +132,22 @@ main {
 
 /* Footer */
 footer {
-    background-color: lightgray;
+    background-color: #0076e4b1;
+    color: white;
+}
+
+#social-network {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    padding: 20px 0;
+    list-style-type: none;
+}
+
+#social-network i {
+    font-size: 160%;
+    padding: 5%;
+    color: white;
 }
 
 /* Media query: tablets and larger (768px and up) */
