--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,12 @@ footer {
     } */
 
     /* New Header design */
+
+    .logo-container {
+        position: absolute;
+        width: 15%;
+        height: 98px;
+    }
     
     .navbar {
         display: block;
@@ -273,6 +279,11 @@ footer {
     .menu {
         display: flex;
         justify-content: space-evenly;
+        width: 85%;
+        flex-wrap: wrap;
+        right: 0;
+        height: 98px;
+        background-color: #022656;
     }
 
     .menu .list-menu{
@@ -285,10 +296,9 @@ footer {
         border: 1px groove rgb(27, 27, 158);
         border-radius: 5px;
         margin-bottom: 5px;
-        background: linear-gradient(0.25turn,
-            #234cff,
-            #d8d8d8,
-            #6b6b6b);
+        background-color: #15FFFE;
+        align-content: center;
+        align-items: center;
     }
 
     .label-toggle-icon {
@@ -297,6 +307,12 @@ footer {
 
     .logo-container {
         /* border-bottom: 1px solid rgb(27, 27, 158); */
+    }
+
+    .navbar .nav-list {
+        font-family: 'Roboto';
+        align-items: center;
+        align-content: center;
     }
 
     /* Main content */
