made header and footer more attractive in both mobile size and bigger size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* Google fonts import */
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shadows+Into+Light&display=swap');
 
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
@@ -150,7 +150,6 @@ header {
     position: absolute;
     /* margin-top: 156px; */
     background-color: #4EA0EC;
-    box-shadow: 0 2px 2px #022656;
 }
 
 .menu .list-menu {
@@ -160,7 +159,7 @@ header {
 }
 
 .navbar .nav-list {
-    color: rgb(27, 27, 158);
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-family: 'Shadows Into Light';
     font-weight: bold;
@@ -183,8 +182,7 @@ header {
 }
 
 .logo-container {
-    background-color: #022656;
-    box-shadow: 0 2px 2px #022656;
+    background: linear-gradient(#022656, #787878);
 }
 
 .toggle-icon {
@@ -203,7 +201,7 @@ header {
 }
 
 .active {
-    background-color: #15FFFE;
+    background-color: #9aa8a8;
 }
 
 /* Navbar display to list */
@@ -226,7 +224,7 @@ main {
 
 /* Footer */
 footer {
-    background-color: #022656;
+    background: linear-gradient(#787878, #022656);
     color: white;
 }
 
@@ -272,15 +270,17 @@ footer {
     /* New Header design */
 
     header {
-        box-shadow: none
+        
     }
 
     .logo-container {
         position: absolute;
         width: 15%;
         height: 98px;
+        background: linear-gradient(#022656, #787878);
+        box-shadow: #78787800;
     }
-    
+
     .navbar {
         display: block;
     }
@@ -292,23 +292,27 @@ footer {
         flex-wrap: wrap;
         right: 0;
         height: 98px;
-        background-color: #022656;
+        background: linear-gradient(#022656, #787878);
     }
 
-    .menu .list-menu{
+    .menu .list-menu {
         border: none;
         font-weight: bold;
         font-variant: small-caps;
         letter-spacing: 3px;
         padding-left: 40px;
         padding-right: 40px;
-        border: 1px groove rgb(27, 27, 158);
-        border-radius: 9px;
-        margin-bottom: 27px;
-        margin-top: 27px;
-        background-color: #022656;
+        /* border: 1px groove rgb(27, 27, 158); */
+        /* border-radius: 9px; */
+        /* margin-bottom: 27px; */
+        margin-top: 49px;
+        /* background: linear-gradient(#022656, #787878); */
         align-content: center;
         align-items: center;
+    }
+
+    #menu .active {
+        background-color: #6495ed3d;
     }
 
     .label-toggle-icon {
@@ -320,7 +324,7 @@ footer {
     }
 
     .navbar .nav-list {
-        font-family: 'Roboto';
+        font-family: 'Hind';
         align-items: center;
         align-content: center;
         color: #FFFFFF;
@@ -331,7 +335,5 @@ footer {
         margin-top: 99px;
     }
 
-    .active {
-        background-color: #35B2DE;
-    }
+
 }
