--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,10 +216,46 @@ header {
 
 /* Main */
 main {
-    background-color: white;
+    /* background-color: white; */
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     /* margin-top: 103px; */
+}
+
+/* Hero section */
+#hero-image {
+    height: 345px;
+    width: 100%;
+    background: url('../images/pngkey.com-ocean-water-png-9920712.png') no-repeat center/cover;
+    /* opacity: 0.7; */
+    /* margin-top: 20px; */
+}
+
+.hero-container {
+    background-color: rgba(233, 233, 233, 0.5);
+    display: flex;
+    justify-content: center;
+}
+
+/* Text after the hero image */
+h1 {
+    text-align: center;
+    padding-top: 20px;
+}
+
+.text-container {
+    background-color: rgb(211, 211, 211);
+    background: linear-gradient(45deg, #aeaeae, transparent);
+}
+
+p {
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 50px;
+}
+
+hr {
+    margin: 10px 100px 0 100px;
 }
 
 /* Footer */
