--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ nav .nav-list {
 
 header {
     box-shadow: 0 2px 2px #022656;
+    position: relative;
 }
 
 .navbar {
@@ -235,6 +236,24 @@ main {
     background-color: rgba(233, 233, 233, 0.5);
     display: flex;
     justify-content: center;
+}
+
+/* go top button */
+.go-top {
+    display: flex;
+    position: fixed;
+    right: 35px;
+    bottom: 84px;
+    background-color: rgb(50 50 50 / 52%);
+    padding: 10px 20px;
+    border-radius: 30%;
+}
+
+.go-top-button {
+    text-decoration: none;
+    color: white;
+    /* font-weight: larger; */
+    font-size: 40px;
 }
 
 /* Text after the hero image */
