--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,21 +257,41 @@ main {
 }
 
 /* Text after the hero image */
-h1 {
+
+section {
+    display: flex;
+    flex-direction: column;
+}
+
+.text-container {
+    background-color: white;
+}
+
+h1,
+h3 {
     text-align: center;
     padding-top: 20px;
 }
 
-.text-container {
-    background-color: rgb(211, 211, 211);
-    background: linear-gradient(45deg, #aeaeae, transparent);
+.subscript {
+    font-size: small;
+}
+
+hr {
+    margin: 10px 30px 10px 30px;
+    border-width: 1px;
+    border-style: solid;
+}
+
+.description {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
 }
 
 .alp-image {
     width: 100%;
     height: 400px;
+    max-width: 425px;
     margin-top: 15px;
     padding: 20px;
 }
@@ -281,20 +301,39 @@ p {
     text-align: center;
 }
 
-.subscript {
-    font-size: small;
+/* Profit water section */
+.profit-water {
+    background: linear-gradient(45deg, #aeaeae, transparent);
 }
 
-hr {
-    margin: 10px 30px 0 30px;
-    border-width: 1px;
-    border-style: solid;
+.drinking-woman {
+    width: 100%;
+    height: 450px;
+    max-width: 425px;
+    margin-top: 15px;
+    padding: 20px;
 }
 
-.description {
-    /* display: flex; */
+/* Products description */
+.products {
+    background-color: white;
 }
 
+.plastic-bottle {
+    width: 100%;
+    height: 450px;
+    max-width: 425px;
+    margin-top: 15px;
+    padding: 20px;
+}
+
+.glass-bottle {
+    width: 100%;
+    height: 300px;
+    max-width: 425px;
+    margin-top: 15px;
+    padding: 20px;
+}
 
 /* Footer */
 footer {
@@ -343,9 +382,7 @@ footer {
 
     /* New Header design */
 
-    header {
-        
-    }
+    header {}
 
     .logo-container {
         position: absolute;
