--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,6 +273,11 @@ h3 {
     padding-top: 20px;
 }
 
+.black-logo {
+    width: 20px;
+    height: 20px;
+}
+
 .subscript {
     font-size: small;
 }
@@ -322,7 +327,7 @@ p {
 .plastic-bottle {
     width: 100%;
     height: 450px;
-    max-width: 425px;
+    max-width: 375px;
     margin-top: 15px;
     padding: 20px;
 }
