--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@ header {
     position: absolute;
     /* margin-top: 156px; */
     background-color: #4EA0EC;
+    z-index: 99;
 }
 
 .menu .list-menu {
@@ -223,17 +224,35 @@ main {
     /* margin-top: 103px; */
 }
 
-/* Hero section */
+/* Hero section of Home page*/
 #hero-image {
-    height: 345px;
+    height: 200px;
     width: 100%;
     background: url('../images/pngkey.com-ocean-water-png-9920712.png') no-repeat center/cover;
     /* opacity: 0.7; */
     /* margin-top: 20px; */
 }
 
+/* Hero section of Products page*/
+#hero-image-products {
+    height: 200px;
+    width: 100%;
+    background: url('../images/products-hero.png') no-repeat center/cover;
+    /* opacity: 0.7; */
+    /* margin-top: 20px; */
+}
+
+/* Hero section of Products page*/
+#hero-image-contact {
+    height: 200px;
+    width: 100%;
+    background: url('../images/pngegg\ \(2\).png') no-repeat center/cover;
+    transform: rotate(180deg);
+    /* opacity: 0.7; */
+    /* margin-top: 20px; */
+}
+
 .hero-container {
-    background-color: rgba(233, 233, 233, 0.5);
     display: flex;
     justify-content: center;
 }
