--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,6 +418,68 @@ tr:nth-child(odd) {
     background-color: #cecece;
 }
 
+/* Contact page */
+.contact-main {
+    background: linear-gradient(45deg, #cecece, #ebebeb, #cecece);
+}
+
+.message-form {
+    width: 90%;
+    max-width: 470px;
+    background-color: #FFFFFF;
+    margin: 50px auto 50px;
+    border-radius: 2px;
+    box-shadow: 1px 1px 20px 1px #0000005c;
+    padding: 40px 35px;
+    text-align: center;
+}
+
+input {
+    padding: 10px;
+    background-color: #f4f8fb;
+    border: none;
+    outline: none;
+    width: 90%;
+}
+
+input:focus {
+    background-color: rgb(218, 218, 218);
+}
+
+.message-input {
+    height: 150px;
+    background-color: #f4f8fb;
+    border: none;
+    outline: none;
+    width: 90%;
+    padding: 10px;
+    resize: none;
+}
+
+.message-input:focus {
+    background-color: rgb(218, 218, 218);
+}
+
+label {
+    display: flex;
+    align-self: flex-start;
+    margin: 16px 0 6px 22px;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+    color: #7a9196;
+}
+
+.submit-button {
+    border-radius: 50px;
+    margin: 20px;
+    background: linear-gradient(90deg, #2937ff, #0072ff, #2937ff);
+    color: #f4f8fb;
+    padding: 13px 30px;
+    box-shadow: 0px 0px 18px 0px #0000008a;
+    max-width: 160px;
+}
+
 /* Footer */
 footer {
     background: linear-gradient(#787878, #022656);
