add padding top to paragraphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,17 +115,16 @@ header {
 
 /* Main */
 main {
-    /* background-color: white; */
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
-    /* margin-top: 103px; */
 }
 
 /* Hero section of Home page*/
 #hero-image {
     height: 200px;
     width: 100%;
-    background: url('../images/pngkey.com-ocean-water-png-9920712.png') no-repeat center/cover;
+    background: url('../images/home-hero-image.png') no-repeat center/cover;
+    transform: rotate(180deg);
 }
 
 /* Hero section of Products page*/
@@ -139,7 +138,7 @@ main {
 #hero-image-contact {
     height: 200px;
     width: 100%;
-    background: url('../images/pngegg\ \(2\).png') no-repeat center/cover;
+    background: url('../images/contact-hero-image.png') no-repeat center/cover;
     transform: rotate(180deg);
 }
 
@@ -205,6 +204,7 @@ hr {
 .description {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .alp-image {
@@ -295,6 +295,10 @@ h4 {
     height: 200px;
     max-width: 90%;
     align-self: center;
+}
+
+.quality-steps-description {
+    margin-top: 10px;
 }
 
 /* Table products page */
@@ -470,7 +474,7 @@ footer {
 
     /* Hero image */
     #hero-image-products {
-        height: 225px;
+        height: 265px;
     }
 
     /* Products page */
@@ -527,6 +531,47 @@ footer {
         padding-bottom: 30px;
     }
 
+    /* Home page */
+    .description {
+        flex-wrap: nowrap;
+        margin: 0 45px 20px 45px;
+    }
+
+    .alp-image,
+    .drinking-woman {
+        width: 40%;
+    }
+
+    .description-p {
+        width: 55%;
+    }
+
+    .drinking-woman {
+        order: 1;
+    }
+
+    .profit-p {
+        width: 55%;
+        order: 0;
+    }
+
+    .home-third-section {
+        padding-top: 40px;
+        width: 50%;
+    }
+
+    .plastic-bottle {
+        width: 25%;
+        height: 350px;
+        margin-top: 70px;
+    }
+
+    .glass-bottle {
+        width: 25%;
+        height: 350px;
+        margin-top: 70px;
+    }
+
     /* Products page */
     .products-plastic-bottles-image {
         width: 30%;
@@ -570,6 +615,14 @@ footer {
 /* Media query: ultra wide screens (1440px and up) */
 @media screen and (min-width: 1440px) {
     #hero-image-contact {
+        height: 350px;
+    }
+
+    #hero-image {
+        height: 350px;
+    }
+
+    #hero-image-products {
         height: 350px;
     }
 }
