--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ main {
 
 .landing-image {
     position: absolute;
-    background: url(../images/landing-image-bottle.png) no-repeat center/cover;
+    background: url('../images/landing-image-bottle.png') no-repeat center/cover;
     height: 300px;
     width: 150px;
     z-index: 99;
@@ -153,7 +153,7 @@ main {
 #hero-image {
     height: 400px;
     width: 100%;
-    background: url('../images/pngwing.com.png') no-repeat center/cover;
+    background: url('../images/home-hero.png') no-repeat center/cover;
     transform: rotate(180deg);
 }
 
