--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,8 +285,8 @@ h4 {
 }
 
 .glass-bottle {
-    width: 100%;
-    height: 300px;
+    width: 260px;
+    height: 280px;
     max-width: 425px;
     margin-top: 15px;
     padding: 20px;
@@ -639,8 +639,6 @@ footer {
     }
 
     .glass-bottle {
-        width: 25%;
-        height: 350px;
         margin-top: 70px;
     }
 
