Change color of the landing div respecting to pallete

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ main {
 }
 
 .landing-image-container {
-    background: linear-gradient(#f9fbff, #0059ff);
+    background: linear-gradient(#f9fbff, #022656);
     height: 260px;
     width: 100%;
     z-index: 99;
